# vision_robot

./: .gitignore  CMakeLists.txt  RESEARCH.md  RESEARCH_NEW.md  package.xml  setup.py
config/: params.yaml
launch/: person_detector.launch  vision_robot.launch
msg/: TrackedPerson.msg  TrackedPersonArray.msg
scripts/: avoidance_policy_node.py  person_detector_node.py  person_tracker_node.py  run_with_venv.sh
src/vision_robot/: config.py  projection.py  tracker.py
